--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -473,7 +473,7 @@ http://www.linphone.cn
     <string name="assistant_login_desc">Please enter your username and password with your SIP domain</string>
     <string name="assistant_remote_provisioning_desc">Please provide your provisioning URL</string>
     <string name="transport">Transport</string>
-    <string name="assistant_create_account_phone_number_address">Your SIP address is</string>
+    <string name="assistant_create_account_phone_number_address">Your SIP myAddress is</string>
     <string name="assistant_login_linphone">Use Linphone account</string>
     <string name="assistant_login_generic">Use SIP account</string>
     <string name="assistant_remote_provisioning">Fetch remote configuration</string>
@@ -507,11 +507,11 @@ http://www.linphone.cn
     <string name="select_your_country">Select your Country</string>
     <string name="country_code">(%s)</string>
     <string name="use_username_instead_or_phone_number">Use a username (optional)</string>
-    <string name="use_email_for_validation">Use email address for account validation</string>
+    <string name="use_email_for_validation">Use email myAddress for account validation</string>
     <string name="login_with_username">Use your username and password instead of your phone number</string>
     <string name="phone_number_info_title">What will my phone number be used for?</string>
-    <string name="phone_number_info_content">\nThanks to your phone number, your friends will find you more easily.\n\n You will see in your address book who is using Linphone and your friends will know that they can rach you on Linphone as well.\n</string>
-    <string name="phone_number_link_info_content">\nYour friends will find you more easily if you link your account to your phone number\n\nYou will see in your address book who is using Linphone and your friends will know that they can reach you on Linphone as well.\n</string>
+    <string name="phone_number_info_content">\nThanks to your phone number, your friends will find you more easily.\n\n You will see in your myAddress book who is using Linphone and your friends will know that they can rach you on Linphone as well.\n</string>
+    <string name="phone_number_link_info_content">\nYour friends will find you more easily if you link your account to your phone number\n\nYou will see in your myAddress book who is using Linphone and your friends will know that they can reach you on Linphone as well.\n</string>
     <string name="phone_number_link_info_content_already_account">You can only use your phone number with one Linphone account.\n\nIf you had already linked your number to an other account but you prefer to use this one, simply link it now and your number will automatically be moved to this account.</string>
 
     <!-- Status -->
@@ -541,7 +541,7 @@ http://www.linphone.cn
     <string name="inapp_notification_account_expire">The subscription period expires on %s</string>
 
     <!-- Dailer -->
-    <string name="address_bar_hint">Enter a number or an address</string>
+    <string name="address_bar_hint">Enter a number or an myAddress</string>
 
     <!-- History -->
     <string name="delete_history_log">Do you want to delete selected call log?</string>
